# app_updater

./: .config.sample.yaml  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yaml
src/: app_updater.py  core_service.py  data_protocols.py  email_sender.py  github_repository.py  version_control_provider.py
test/: test_app_updater.py  test_github_repository.py
